// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AdjParadigm Lule saami adjective 1`] = `
<table
  className="MuiTable-root-17"
>
  <thead
    className="MuiTableHead-root-18"
  >
    <tr
      className="MuiTableRow-root-19 MuiTableRow-head-22"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-head-25"
        scope="col"
      >
         
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-head-25"
        scope="col"
      >
        Positive
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-head-25"
        scope="col"
      >
        Comparative
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-head-25"
        scope="col"
      >
        Superlative
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-32"
  >
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        colSpan={4}
        scope={undefined}
      >
        Attr
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásup
        </div>
        <div>
          lidnásap
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidna
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásamos
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        colSpan={4}
        scope={undefined}
      >
        Sg
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Nom
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabbo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lines
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásamos
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Gen
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnása
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusa
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Acc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappov
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásav
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusav
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ill
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabbuj
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásij
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ine
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappon
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ela
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappos
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásis
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusis
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Com
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappujn
        </div>
        <div>
          lidnásappojn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Abe
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappodagá
        </div>
        <div>
          lidnásappodagi
        </div>
        <div>
          lidnásappotagá
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásadagá
        </div>
        <div>
          lidnásadagi
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusadagá
        </div>
        <div>
          lidnásabmusadagi
        </div>
        <div>
          lidnásabmusatagá
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        colSpan={4}
        scope={undefined}
      >
        Pl
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Nom
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnása
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusa
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Gen
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappoj
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásij
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Acc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappojt
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijt
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijt
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ill
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappojda
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijda
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ine
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappojn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ela
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappojs
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijs
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijs
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Com
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappoj
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásij
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Abe
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásappojdagá
        </div>
        <div>
          lidnásappojdagi
        </div>
        <div>
          lidnásappojtagá
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásijdagá
        </div>
        <div>
          lidnásijdagi
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusijdagá
        </div>
        <div>
          lidnásabmusijdagi
        </div>
        <div>
          lidnásabmusijtagá
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        colSpan={4}
        scope={undefined}
      >
        Both
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-19"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <span>
          Ess
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabbon
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-24 MuiTableCell-body-26"
        scope={undefined}
      >
        <div>
          lidnásabmusin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots AdjParadigm North saami adjective 1`] = `
<table
  className="MuiTable-root-1"
>
  <thead
    className="MuiTableHead-root-2"
  >
    <tr
      className="MuiTableRow-root-3 MuiTableRow-head-6"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-head-9"
        scope="col"
      >
         
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-head-9"
        scope="col"
      >
        Positive
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-head-9"
        scope="col"
      >
        Comparative
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-head-9"
        scope="col"
      >
        Superlative
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-16"
  >
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        colSpan={4}
        scope={undefined}
      >
        Attr
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litna
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásut
        </div>
        <div>
          litnásit
        </div>
        <div>
          litnáset
        </div>
        <div>
          litnásat
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseamos
        </div>
        <div>
          litnásamos
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        colSpan={4}
        scope={undefined}
      >
        Sg
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Nom
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          linis
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásut
        </div>
        <div>
          litnásit
        </div>
        <div>
          litnáset
        </div>
        <div>
          litnáseabbo
        </div>
        <div>
          litnásat
        </div>
        <div>
          litnásabbo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseamos
        </div>
        <div>
          litnásamos
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Gen
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnása
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappo
        </div>
        <div>
          litnásabbo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosa
        </div>
        <div>
          litnásamosa
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Acc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnása
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappo
        </div>
        <div>
          litnásabbo
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosa
        </div>
        <div>
          litnásamosa
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Ill
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásii
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásebbui
        </div>
        <div>
          litnásabbui
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosii
        </div>
        <div>
          litnásamosii
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Loc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásis
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappos
        </div>
        <div>
          litnásabbos
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosis
        </div>
        <div>
          litnásamosis
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Com
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuin
        </div>
        <div>
          litnásabbuin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiin
        </div>
        <div>
          litnásamosiin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        colSpan={4}
        scope={undefined}
      >
        Pl
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Nom
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásat
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappot
        </div>
        <div>
          litnásabbot
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosat
        </div>
        <div>
          litnásamosat
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Gen
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiid
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuid
        </div>
        <div>
          litnásabbuid
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiid
        </div>
        <div>
          litnásamosiid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Acc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiid
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuid
        </div>
        <div>
          litnásabbuid
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiid
        </div>
        <div>
          litnásamosiid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Ill
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiidda
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuide
        </div>
        <div>
          litnásabbuide
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiidda
        </div>
        <div>
          litnásamosiidda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Loc
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuin
        </div>
        <div>
          litnásabbuin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiin
        </div>
        <div>
          litnásamosiin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Com
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásiiguin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseappuiguin
        </div>
        <div>
          litnásabbuiguin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnásepmosiiguin
        </div>
        <div>
          litnásamosiiguin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        colSpan={4}
        scope={undefined}
      >
        Both
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-3"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <span>
          Ess
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          linisin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseabbon
        </div>
        <div>
          litnásabbon
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-8 MuiTableCell-body-10"
        scope={undefined}
      >
        <div>
          litnáseamosin
        </div>
        <div>
          litnásamosin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Articles All types 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle with examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle without examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Loading 1`] = `
<div>
  Loading …
</div>
`;

exports[`Storyshots Articles Only SDTermArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Only TermWikiArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots DictArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div>
    <div
      className="css-1marblh"
    >
      <div>
        original0
      </div>
      <div
        className="css-1msjh1x"
      >
        translation0
      </div>
    </div>
    <div
      className="css-1marblh"
    >
      <div>
        original1
      </div>
      <div
        className="css-1msjh1x"
      >
        translation1
      </div>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots DictArticle without_examples 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div />
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots Example default 1`] = `
<div
  className="css-1marblh"
>
  <div>
    original
  </div>
  <div
    className="css-1msjh1x"
  >
    translation
  </div>
</div>
`;

exports[`Storyshots Examples default 1`] = `
<div>
  <div
    className="css-1marblh"
  >
    <div>
      original0
    </div>
    <div
      className="css-1msjh1x"
    >
      translation0
    </div>
  </div>
  <div
    className="css-1marblh"
  >
    <div>
      original1
    </div>
    <div
      className="css-1msjh1x"
    >
      translation1
    </div>
  </div>
</div>
`;

exports[`Storyshots NounParadigm Inari saami noun 1`] = `
<table
  className="MuiTable-root-81"
>
  <thead
    className="MuiTableHead-root-82"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-83 MuiTableCell-head-84"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-83 MuiTableCell-head-84"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-83 MuiTableCell-head-84"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-91"
  >
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyeli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyeleh
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyele
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyele
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuálán
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Loc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyeleest
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijguin
        </div>
        <div>
          kuolijgijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kyelettáá
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        <div>
          kuolijttáá
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Par
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        colSpan={2}
        scope={undefined}
      >
        <div>
          kyellid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-92"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-83 MuiTableCell-body-85"
        colSpan={2}
        scope={undefined}
      >
        <div>
          kyellin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm Lule saami noun 1`] = `
<table
  className="MuiTable-root-65"
>
  <thead
    className="MuiTableHead-root-66"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-75"
  >
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolle
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guole
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guole
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolev
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijt
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolláj
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ine
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolen
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ela
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guoles
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijs
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijn
        </div>
        <div>
          guolijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guoledagá
        </div>
        <div>
          guoledagi
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          guolijdagá
        </div>
        <div>
          guolijdagi
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guoledak
        </div>
        <div>
          guoleda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guollen
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm North saami noun 1`] = `
<table
  className="MuiTable-root-49"
>
  <thead
    className="MuiTableHead-root-50"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-59"
  >
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolit
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guole
        </div>
        <div>
          guoli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guoli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guollái
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Loc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolis
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guliiguin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guollin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm South saami noun 1`] = `
<table
  className="MuiTable-root-33"
>
  <thead
    className="MuiTableHead-root-34"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-43"
  >
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guelie
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guelieh
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guelien
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gööli
        </div>
        <div>
          gueliej
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gueliem
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gualan
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ine
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guelesne
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ela
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gueleste
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          göölijste
        </div>
        <div>
          guelijste
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          gööligujmie
        </div>
        <div>
          gueliejgujmie
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        colSpan={2}
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots SDTermArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    SD-terms
  </div>
</div>
`;

exports[`Storyshots Source default 1`] = `
<div
  className="css-jxikhn"
>
  Source: 
  smenob
</div>
`;

exports[`Storyshots Stem default 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem key_nonzero 1`] = `
<div
  className="css-1inwbm7"
>
  <span
    className="css-6n7j50"
  >
    <span
      className="css-1xbsv2t"
    >
      guolli
    </span>
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem lang_nonsme 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    smj
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/?mode=smj#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem non_sami 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    nob
  </span>
</div>
`;

exports[`Storyshots Stems default 1`] = `
<div>
  <div
    className="css-1jd5iyo"
  >
    <span
      className="css-6n7j50"
    >
      guolli
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1inwbm7"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1idyajt"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      nob
    </span>
  </div>
</div>
`;

exports[`Storyshots TermWikiArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    <a
      href="https://satni.uit.no/termwiki/index.php?title=Luonddudieđa ja matematihkka:guolli"
      target="_blank"
    >
      This article on the TermWiki
    </a>
  </div>
</div>
`;
